# web_crawling

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  invert_index.json  pyproject.toml  requirements.txt  search.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
tests/: test_benchmark.py  test_cli_and_entrypoints.py  test_core_modes.py  test_search_query.py  test_web_api.py
web_crawling/: __init__.py  benchmark.py  cli.py  core.py  webui.py
web_crawling/static/: app.css
web_crawling/templates/: dashboard.html  portfolio.html  search.html
