[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-crawling-search"
version = "0.1.0"
description = "Web crawler and inverted-index search tool with CLI and Web UI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Contributors" }
]
dependencies = [
  "beautifulsoup4==4.12.3",
  "Flask==3.0.3",
  "requests==2.32.3",
  "tqdm==4.66.4"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.2"
]

[project.scripts]
web-crawling = "web_crawling.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
