[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-crawling-search"
version = "0.1.0"
description = "Web crawler and inverted-index search tool with CLI and Web UI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Contributors" }
]
dependencies = [
  "beautifulsoup4==4.12.3",
  "Flask==3.0.3",
  "requests==2.32.3",
  "tqdm==4.66.4"
]

[project.optional-dependencies]
dev = [
  "build==1.2.2.post1",
  "coverage==7.6.1",
  "pytest==8.3.2",
  "ruff==0.6.9"
]

[project.scripts]
web-crawling = "web_crawling.cli:main"

[tool.setuptools]
py-modules = ["search"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["web_crawling*"]
exclude = ["tests*", "logs*"]

[tool.setuptools.package-data]
web_crawling = ["templates/*.html", "static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["web_crawling", "search"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 45

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
